@@ -35,6 +35,8 @@ Version 2.0-dev (CVS)
   passed in feature instead of through the return value of the method as
   was the case with the old SetFeature() method in MITAB 1.x.
 
+- Fixed incorrect parameters for krovak projection in ogr_srs_proj4.cpp
+ 
 - Fixed memory leaks in mitab_capi.cpp and mitab_coordsys.cpp
 
 - C API: added mitab_c_bounds_set() function (bug 2233)
@@ -984,5 +986,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.245 2010-07-05 18:32:48 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.246 2010-07-05 18:39:57 aboudreault Exp $
 ------------
